syntax = "proto3";
option go_package = "github.com/smartcontractkit/chainlink-common/pkg/chains/aptos";

package loop.aptos;

service Aptos {
  rpc AccountAPTBalance(AccountAPTBalanceRequest) returns (AccountAPTBalanceReply);
  rpc View(ViewRequest) returns (ViewReply);
  rpc TransactionByHash(TransactionByHashRequest) returns (TransactionByHashReply);
  rpc AccountTransactions(AccountTransactionsRequest) returns (AccountTransactionsReply);
  rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionReply);
}

// ========== AccountAPTBalance ==========

message AccountAPTBalanceRequest {
  bytes address = 1;        // 32-byte address
}

message AccountAPTBalanceReply {
  uint64 value = 1;
}

// ========== View ==========

message ViewRequest {
  ViewPayload payload = 1;
}

message ViewReply {
  bytes data = 1;
}

message ViewPayload {
  ModuleID module = 1;
  string function = 2;
  repeated TypeTag arg_types = 3;
  repeated bytes args = 4;
}

message ModuleID {
  bytes address = 1;  // 32-byte address
  string name = 2;
}

message TypeTag {
  TypeTagKind kind = 1;
  oneof value {
    VectorTag vector = 2;
    StructTag struct = 3;
    GenericTag generic = 4;
  }
}

enum TypeTagKind {
  TYPE_TAG_KIND_BOOL = 0;
  TYPE_TAG_KIND_U8 = 1;
  TYPE_TAG_KIND_U16 = 2;
  TYPE_TAG_KIND_U32 = 3;
  TYPE_TAG_KIND_U64 = 4;
  TYPE_TAG_KIND_U128 = 5;
  TYPE_TAG_KIND_U256 = 6;
  TYPE_TAG_KIND_ADDRESS = 7;
  TYPE_TAG_KIND_SIGNER = 8;
  TYPE_TAG_KIND_VECTOR = 9;
  TYPE_TAG_KIND_STRUCT = 10;
  TYPE_TAG_KIND_GENERIC = 11;
}

message VectorTag {
  TypeTag element_type = 1;
}

message StructTag {
  bytes address = 1;     // 32-byte address
  string module = 2;
  string name = 3;
  repeated TypeTag type_params = 4;
}

message GenericTag {
  uint32 index = 1;
}


// ========== TransactionByHash ==========

message TransactionByHashRequest {
  string hash = 1;  // Transaction hash (hex string with 0x prefix)
}

message TransactionByHashReply {
  optional Transaction transaction = 1;
}

enum TransactionVariant {
  TRANSACTION_VARIANT_PENDING = 0;
  TRANSACTION_VARIANT_USER = 1;
  TRANSACTION_VARIANT_GENESIS = 2;
  TRANSACTION_VARIANT_BLOCK_METADATA = 3;
  TRANSACTION_VARIANT_BLOCK_EPILOGUE = 4;
  TRANSACTION_VARIANT_STATE_CHECKPOINT = 5;
  TRANSACTION_VARIANT_VALIDATOR = 6;
  TRANSACTION_VARIANT_UNKNOWN = 7;
}

message Transaction {
  TransactionVariant type = 1;
  string hash = 2;
  optional uint64 version = 3;  // nil for pending transactions
  optional bool success = 4;    // nil for pending/genesis transactions
  bytes data = 5;               // Raw transaction data
}

// ========== AccountTransactions ==========

message AccountTransactionsRequest {
  bytes address = 1;              // 32-byte address
  optional uint64 start = 2;     // Starting version number; nil for most recent
  optional uint64 limit = 3;     // Number of transactions to return; nil for default (~100)
}

message AccountTransactionsReply {
  repeated Transaction transactions = 1;
}

// ========== SubmitTransaction ==========

message SubmitTransactionRequest {
  ModuleID receiver_module_id = 1;
  bytes encoded_payload = 2;
  optional GasConfig gas_config = 3;
}

enum TxStatus {
  TX_STATUS_FATAL = 0;     // Transaction processing failed due to a network issue, RPC issue, or other fatal error
  TX_STATUS_REVERTED = 1;  // Transaction was sent successfully but the smart contract execution reverted
  TX_STATUS_SUCCESS = 2;   // Transaction was sent successfully, executed and mined into a block
}

message SubmitTransactionReply {
  TxStatus tx_status = 1;
  string tx_hash = 2;
  string tx_idempotency_key = 3;
}

message GasConfig {
  uint64 max_gas_amount = 1;  // Maximum gas units willing to pay
  uint64 gas_unit_price = 2;  // Price per gas unit in octas
}

